--- a/3d-printer-suite/package.json
+++ b/3d-printer-suite/package.json
@@ -13,6 +13,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reach/tabs": "^0.18.0",
+    "@react-three/drei": "^9.92.1",
+    "@react-three/fiber": "^8.15.12",
+    "three": "^0.159.0",
+    "@types/three": "^0.159.0",
+    "comlink": "^4.4.1",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
