Refactor workflows and enhance UI for 3D Printer Suite
- Updated GitHub Actions workflows to use Yarn instead of npm for dependency management, improving build consistency.
- Enhanced index.html with updated favicon and added Google Fonts for better typography.
- Improved Tailwind CSS configuration with new color themes and font families for better design consistency.
- Refactored multiple components to support dark mode and improve overall UI aesthetics, including PrinterDashboard, PrinterLayout, and PrintMonitorDashboard.
- Added ThemeToggle component for user-friendly theme switching.
- Enhanced print monitoring and calibration components for better user experience and visual feedback.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,14 +29,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: 3d-printer-suite/package-lock.json
+          cache: 'yarn'
+          cache-dependency-path: 3d-printer-suite/yarn.lock
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Build
-        run: npm run build
+        run: yarn build
 
       - name: SPA fallback (copy index.html to 404.html)
         run: cp dist/index.html dist/404.html || true
