Update package.json to include deploy command for GitHub Pages
- Added a deploy script to package.json for building the project and deploying to GitHub Pages.
- This enhances the deployment process by automating build and deployment steps.

--- a/3d-printer-suite/package.json
+++ b/3d-printer-suite/package.json
@@ -13,7 +13,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "deploy": "yarn build && touch dist/.nojekyll && npx gh-pages -d dist"
   },
   "dependencies": {
     "@reach/tabs": "^0.18.0",
