Fix GitHub Pages deployment: Update base path and workflow
- Fix Vite base path from /3D-PRINTER-SUITE/ to /3D-PRINTER-MANAGER/
- Update GitHub Actions to use modern actions/deploy-pages
- Add .nojekyll files to prevent Jekyll processing
- Add build script for GitHub Pages optimization
- Update deployment documentation

Fixes 404 error on GitHub Pages deployment

--- a/3d-printer-suite/package.json
+++ b/3d-printer-suite/package.json
@@ -9,12 +9,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:pages": "node scripts/build-for-github-pages.js && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "deploy": "yarn build && touch dist/.nojekyll && npx gh-pages -d dist"
+    "deploy": "yarn build:pages && npx gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
     "@reach/tabs": "^0.18.0",
