Remove obsolete stack dump file and update GitHub Actions workflow for improved deployment
- Deleted the outdated bash.exe.stackdump file to clean up the repository.
- Updated .github/workflows/deploy.yml to navigate to the correct directory before installation and added a step to copy the build output to the root directory.
- Enhanced the gitignore file to exclude specific script files from tracking.
- Removed the old deploy workflow from the 3d-printer-suite directory to streamline the deployment process.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
           cache: 'yarn'
           cache-dependency-path: 3d-printer-suite/yarn.lock
 
+      - name: navigate to cwd
+        run: cd 3d-printer-suite 
+  
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
@@ -40,6 +43,9 @@ jobs:
 
       - name: SPA fallback (copy index.html to 404.html)
         run: cp dist/index.html dist/404.html || true
+
+      - name: copy dist to root
+        run: cp dist ../ 
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
