Update deployment workflow and enhance printer command handling
- Modified .github/workflows/deploy.yml to copy build output from the dist directory to the root for GitHub Pages deployment.
- Ensured .nojekyll file is created in the root to prevent Jekyll processing.
- Updated Vite configuration base path to '/' for correct deployment.
- Enhanced serialStore to include additional commands for clearing printer status after print completion.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,10 +47,21 @@ jobs:
       - name: SPA fallback (copy index.html to 404.html)
         run: cp dist/index.html dist/404.html || true
 
+      - name: Copy dist contents to root for GitHub Pages
+        run: |
+          # Go back to root directory
+          cd ..
+          # Copy all contents from 3d-printer-suite/dist to root
+          cp -r 3d-printer-suite/dist/* .
+          # Ensure .nojekyll is in root
+          touch .nojekyll
+          # Create 404.html for SPA fallback
+          cp index.html 404.html || true
+
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 3d-printer-suite/dist
+          path: .
 
   deploy:
     environment:
