Refactor deployment workflow and Vite configuration for GitHub Pages
- Updated .github/workflows/deploy.yml to copy build output directly to the root directory for GitHub Pages deployment.
- Ensured .nojekyll file is created in the root to prevent Jekyll processing.
- Adjusted Vite configuration base path to '/' for correct deployment.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,23 +47,21 @@ jobs:
       - name: SPA fallback (copy index.html to 404.html)
         run: cp dist/index.html dist/404.html || true
 
-      - name: Create deployment structure
+      - name: Copy dist contents to root for GitHub Pages
         run: |
           # Go back to root directory
           cd ..
-          # Create the 3D-PRINTER-MANAGER directory structure
-          mkdir -p 3D-PRINTER-MANAGER/3d-printer-suite
-          # Copy all contents from 3d-printer-suite/dist to the target directory
-          cp -r 3d-printer-suite/dist/* 3D-PRINTER-MANAGER/3d-printer-suite/
-          # Ensure .nojekyll is in the target directory
-          touch 3D-PRINTER-MANAGER/3d-printer-suite/.nojekyll
+          # Copy all contents from 3d-printer-suite/dist to root
+          cp -r 3d-printer-suite/dist/* .
+          # Ensure .nojekyll is in root
+          touch .nojekyll
           # Create 404.html for SPA fallback
-          cp 3D-PRINTER-MANAGER/3d-printer-suite/index.html 3D-PRINTER-MANAGER/3d-printer-suite/404.html || true
+          cp index.html 404.html || true
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 3D-PRINTER-MANAGER/3d-printer-suite
+          path: .
 
   deploy:
     environment:
